--- a/MyDbtDiaryCard/MyDbtDiaryCard/Views/AddDayEntryPage.xaml
+++ b/MyDbtDiaryCard/MyDbtDiaryCard/Views/AddDayEntryPage.xaml
@@ -2,9 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MyDbtDiaryCard.ViewModels"
+             xmlns:resx="clr-namespace:MyDbtDiaryCard.Resx"
              x:DataType="local:AddDayEntryViewModel"
              x:Class="MyDbtDiaryCard.Views.AddDayEntryPage"
-             Title="{Binding StringDate}"
              BackgroundColor="{StaticResource BackgroundPageColor}"
              NavigationPage.HasNavigationBar ="False">
     <ContentPage.Resources>
@@ -43,151 +43,221 @@
 
         <Style TargetType="Picker" x:Key="GeneralPicker">
             <Setter Property="ItemsSource" Value="{StaticResource GeneralScale}"/>
-            <Setter Property="BackgroundColor" Value="DeepSkyBlue"/>
             <Setter Property="Grid.Column" Value="2"/>
         </Style>
         
         <Style TargetType="Picker" x:Key="UrgesPicker">
             <Setter Property="ItemsSource" Value="{StaticResource UrgesScale}"/>
-            <Setter Property="BackgroundColor" Value="DeepSkyBlue"/>
             <Setter Property="Grid.Column" Value="2"/>
         </Style>
 
         <Style TargetType="Picker" x:Key="UsefulnessPicker">
             <Setter Property="ItemsSource" Value="{StaticResource UsefulnessScale}"/>
-            <Setter Property="SelectedIndex" Value="{Binding Converter={StaticResource ScaleToIndexCvt}}"/>
-            <Setter Property="BackgroundColor" Value="DeepSkyBlue"/>
+            <Setter Property="Grid.Column" Value="2"/>
         </Style>
 
     </ContentPage.Resources>
 
-    <Grid ColumnDefinitions="1" RowDefinitions="Auto">
+    <Grid RowDefinitions="Auto" RowSpacing="0">
 
-        <StackLayout x:Name="stckToolBar" Grid.Row="0" Grid.Column="1" VerticalOptions="Start" Orientation="Horizontal">
-            <Label Text="{Binding StringDate}" HorizontalOptions="Center" Style="{StaticResource PageTitleStyle}"/>
-        </StackLayout>
+        <Grid Style="{StaticResource grdToolBar}" BackgroundColor="{StaticResource DarkerAccentColor}">
+            <Label Text="{Binding StringDate}" Style="{StaticResource PageTitleStyle}"/>
+        </Grid>
 
-        <ScrollView Grid.Row="1" Grid.Column="1">
-
+        <ScrollView Grid.Row="1">
             <StackLayout x:Name="Items">
 
                 <Frame x:Name="Feelings">
-                    <StackLayout>
+                    <StackLayout  BindingContext="{Binding DayFeelings}" x:DataType="{x:Null}">
 
-                        <Label Text="Feelings" Style="{StaticResource ItemsTitleStyle}"/>
-
-                        <Grid ColumnDefinitions="2" BindingContext="{Binding DayFeelings}" x:DataType="{x:Null}">
-                            <Label Text="Emotional Misery:" Grid.Column="1" Grid.Row="1"/>
-                            <Picker Style="{StaticResource GeneralPicker}"
-                                    Title="Emotional Misery" Grid.Row="1"
+                        <Label Text="{x:Static resx:EntryResources.Feelings}"
+                               Style="{StaticResource ItemsTitleStyle}"/>
+                        
+                        <StackLayout Style="{StaticResource ItemField}">
+                            <Grid Style="{StaticResource grdItemField}">
+                                <Label Text="{x:Static resx:EntryResources.F_EmotionMisery}"
+                                       Style="{StaticResource lblFieldName}"/>
+                                
+                                <Picker Style="{StaticResource GeneralPicker}"
+                                    Title="{x:Static resx:EntryResources.F_EmotionMisery}"
                                     SelectedIndex="{Binding EmotionMisery, Converter={StaticResource ScaleToIndexCvt}}"/>
+                            </Grid>
+                        </StackLayout>
 
-                            <Label Text="Physical Misery:" Grid.Column="1" Grid.Row="2"/>
-                            <Picker Style="{StaticResource GeneralPicker}" 
-                                    Title="Physical Misery" Grid.Row="2"
+                        <StackLayout Style="{StaticResource ItemField}">
+                            <Grid Style="{StaticResource grdItemField}">
+                                <Label Text="{x:Static resx:EntryResources.F_PhysicalMisery}"
+                                       Style="{StaticResource lblFieldName}"/>
+
+                                <Picker Style="{StaticResource GeneralPicker}" 
+                                    Title="{x:Static resx:EntryResources.F_PhysicalMisery}"
                                     SelectedIndex="{Binding PhysicalMisery, Converter={StaticResource ScaleToIndexCvt}}"/>
+                            </Grid>
+                        </StackLayout>
 
-                            <Label Text="Excitation:" Grid.Column="1" Grid.Row="3"/>
-                            <Picker Style="{StaticResource GeneralPicker}"
-                                    Title="Excitation" Grid.Row="3"
+                        <StackLayout Style="{StaticResource ItemField}">
+                            <Grid Style="{StaticResource grdItemField}">
+                                <Label Text="{x:Static resx:EntryResources.F_Excitation}"
+                                       Style="{StaticResource lblFieldName}"/>
+                                
+                                <Picker Style="{StaticResource GeneralPicker}"
+                                    Title="{x:Static resx:EntryResources.F_Excitation}"
                                     SelectedIndex="{Binding Excitation, Converter={StaticResource ScaleToIndexCvt}}"/>
-                        </Grid>
+                            </Grid>
+                        </StackLayout>
 
-                        <Label Text="Additional comments:"/>
-                        <Editor Text="{Binding DayFeelings.Additional}" AutoSize="TextChanges"/>
+                        <Label Text="{x:Static resx:EntryResources.Additional}"/>
+                        <Editor Text="{Binding DayFeelings.Additional}"
+                                AutoSize="TextChanges"
+                                PlaceholderColor="Aquamarine"/>
 
                     </StackLayout>
                 </Frame>
 
                 <Frame x:Name="Emotions">
-                    <StackLayout>
+                    <StackLayout  BindingContext="{Binding DayEmotions}" x:DataType="{x:Null}">
 
-                        <Label Text="Emotions" Style="{StaticResource ItemsTitleStyle}" />
+                        <Label Text="{x:Static resx:EntryResources.Emotions}"
+                               Style="{StaticResource ItemsTitleStyle}" />
 
-                        <Grid ColumnDefinitions="2">
-                            <Label Text="Anger: " Grid.Column="1" Grid.Row="1"/>
-                            <Picker Style="{StaticResource GeneralPicker}"
-                                    Title="Anger"  Grid.Row="1"
-                                    SelectedIndex="{Binding DayEmotions.Anger, Converter={StaticResource ScaleToIndexCvt}}"/>
 
-                            <Label Text="Sadness:" Grid.Column="1" Grid.Row="2"/>
-                            <Picker Style="{StaticResource GeneralPicker}" 
-                                    Title="Sadness"  Grid.Row="2"
-                                    SelectedIndex="{Binding DayEmotions.Sadness, Converter={StaticResource ScaleToIndexCvt}}"/>
+                        <StackLayout Style="{StaticResource ItemField}">
+                            <Grid Style="{StaticResource grdItemField}">
+                                <Label Text="{x:Static resx:EntryResources.E_Anger}"
+                                   Style="{StaticResource lblFieldName}"/>
+                                <Picker Style="{StaticResource GeneralPicker}"
+                                    Title="{x:Static resx:EntryResources.E_Anger}"
+                                    SelectedIndex="{Binding Anger, Converter={StaticResource ScaleToIndexCvt}}"/>
+                            </Grid>
+                        </StackLayout>
 
-                            <Label Text="Fear: " Grid.Column="1" Grid.Row="3"/>
-                            <Picker Style="{StaticResource GeneralPicker}"
-                                    Title="Fear"  Grid.Row="3"
-                                    SelectedIndex="{Binding DayEmotions.Fear, Converter={StaticResource ScaleToIndexCvt}}"/>
 
-                            <Label Text="Shame: " Grid.Column="1" Grid.Row="4"/>
-                            <Picker Style="{StaticResource GeneralPicker}"
-                                    Title="Shame" Grid.Row="4"
-                                    SelectedIndex="{Binding DayEmotions.Shame, Converter={StaticResource ScaleToIndexCvt}}"/>
+                        <StackLayout Style="{StaticResource ItemField}">
+                            <Grid Style="{StaticResource grdItemField}">
+                                <Label Text="{x:Static resx:EntryResources.E_Sadness}"
+                                   Style="{StaticResource lblFieldName}"/>
+                                
+                                <Picker Style="{StaticResource GeneralPicker}" 
+                                    Title="{x:Static resx:EntryResources.E_Sadness}"
+                                    SelectedIndex="{Binding Sadness, Converter={StaticResource ScaleToIndexCvt}}"/>
+                            </Grid>
+                        </StackLayout>
 
-                            <Label Text="Pride: " Grid.Column="1" Grid.Row="6"/>
-                            <Picker Style="{StaticResource GeneralPicker}"
-                                    Title="Pride" Grid.Row="6"
-                                    SelectedIndex="{Binding DayEmotions.Pride, Converter={StaticResource ScaleToIndexCvt}}"/>
 
-                            <Label Text="Joy: " Grid.Column="1" Grid.Row="5"/>
-                            <Picker Style="{StaticResource GeneralPicker}"
-                                    Title="Joy" Grid.Row="5"
-                                    SelectedIndex="{Binding DayEmotions.Joy, Converter={StaticResource ScaleToIndexCvt}}"/>
+                        <StackLayout Style="{StaticResource ItemField}">
+                            <Grid Style="{StaticResource grdItemField}">
+                                <Label Text="{x:Static resx:EntryResources.E_Fear}"
+                                   Style="{StaticResource lblFieldName}"/>
+                                
+                                <Picker Style="{StaticResource GeneralPicker}"
+                                    Title="{x:Static resx:EntryResources.E_Fear}"
+                                    SelectedIndex="{Binding Fear, Converter={StaticResource ScaleToIndexCvt}}"/>
+                            </Grid>
+                        </StackLayout>
 
-                        </Grid>
+
+                        <StackLayout Style="{StaticResource ItemField}">
+                            <Grid Style="{StaticResource grdItemField}">
+                                <Label Text="{x:Static resx:EntryResources.E_Shame}"
+                                       Style="{StaticResource lblFieldName}"/>
+                                
+                                <Picker Style="{StaticResource GeneralPicker}"
+                                    Title="{x:Static resx:EntryResources.E_Shame}"
+                                    SelectedIndex="{Binding Shame, Converter={StaticResource ScaleToIndexCvt}}"/>
+                            </Grid>
+                        </StackLayout>
+
+
+                        <StackLayout Style="{StaticResource ItemField}">
+                            <Grid Style="{StaticResource grdItemField}">
+                                <Label Text="{x:Static resx:EntryResources.E_Pride}"
+                                   Style="{StaticResource lblFieldName}"/>
+                                
+                                <Picker Style="{StaticResource GeneralPicker}"
+                                    Title="{x:Static resx:EntryResources.E_Pride}"
+                                    SelectedIndex="{Binding Pride, Converter={StaticResource ScaleToIndexCvt}}"/>
+                            </Grid>
+                        </StackLayout>
+
+                        <StackLayout Style="{StaticResource ItemField}">
+                            <Grid Style="{StaticResource grdItemField}">
+                                <Label Text="{x:Static resx:EntryResources.E_Joy}" 
+                                   Style="{StaticResource lblFieldName}"/>
+                                
+                                <Picker Style="{StaticResource GeneralPicker}"
+                                    Title="{x:Static resx:EntryResources.E_Joy}"
+                                    SelectedIndex="{Binding Joy, Converter={StaticResource ScaleToIndexCvt}}"/>
+                            </Grid>
+                        </StackLayout>
 
                     </StackLayout>
                 </Frame>
 
                 <Frame>
-                    <StackLayout>
+                    <StackLayout  BindingContext="{Binding DayUrges}" x:DataType="{x:Null}">
 
-                        <Label Text="Urges" Style="{StaticResource ItemsTitleStyle}"/>
+                        <Label Text="{x:Static resx:EntryResources.Urges}" Style="{StaticResource ItemsTitleStyle}"/>
 
-                        <Grid ColumnDefinitions="2" BindingContext="{Binding DayUrges}" x:DataType="{x:Null}">
-
-                            <Label Text="Selfham: " Grid.Column="1" Grid.Row="1"/>
-                            <Picker Style="{StaticResource UrgesPicker}"
-                                    Title="Selfharm" Grid.Row="1"
+                        <StackLayout Style="{StaticResource ItemField}">
+                            <Grid Style="{StaticResource grdItemField}">
+                                <Label Text="{x:Static resx:EntryResources.U_SelfHarm}"
+                                   Style="{StaticResource lblFieldName}"/>
+                                <Picker Style="{StaticResource UrgesPicker}"
+                                    Title="{x:Static resx:EntryResources.U_SelfHarm}"
                                     SelectedIndex="{Binding SelfHarm, Converter={StaticResource ScaleToIndexCvt}}"/>
+                            </Grid>
+                        </StackLayout>
 
-                            <Label Text="Suicide: " Grid.Column="1" Grid.Row="2"/>
-                            <Picker Style="{StaticResource UrgesPicker}"
-                                    Title="Suicide" Grid.Row="2"
+                        <StackLayout Style="{StaticResource ItemField}">
+                            <Grid Style="{StaticResource grdItemField}">
+                                <Label Text="{x:Static resx:EntryResources.U_Suicide}"
+                                   Style="{StaticResource lblFieldName}"/>
+                                <Picker Style="{StaticResource UrgesPicker}"
+                                    Title="{x:Static resx:EntryResources.U_Suicide}"
                                     SelectedIndex="{Binding Suicide, Converter={StaticResource ScaleToIndexCvt}}"/>
+                            </Grid>
+                        </StackLayout>
 
-                            <Label Text="Drugs: " Grid.Column="1" Grid.Row="3"/>
-                            <Picker Style="{StaticResource UrgesPicker}"
-                                    Title="Drugs" Grid.Row="3"
+                        <StackLayout Style="{StaticResource ItemField}">
+                            <Grid Style="{StaticResource grdItemField}">
+                                <Label Text="{x:Static resx:EntryResources.U_Drugs}"
+                                   Style="{StaticResource lblFieldName}"/>
+                                <Picker Style="{StaticResource UrgesPicker}"
+                                    Title="{x:Static resx:EntryResources.U_Drugs}"
                                     SelectedIndex="{Binding Drugs, Converter={StaticResource ScaleToIndexCvt}}"/>
+                            </Grid>
+                        </StackLayout>
 
-                            <Label Text="Alcohol: " Grid.Column="1" Grid.Row="4"/>
-                            <Picker Style="{StaticResource UrgesPicker}"
-                                    Title="Alcohol" Grid.Row="4"
+                        <StackLayout Style="{StaticResource ItemField}">
+                            <Grid Style="{StaticResource grdItemField}">
+                                <Label Text="{x:Static resx:EntryResources.U_Alcohol}"
+                                   Style="{StaticResource lblFieldName}"/>
+                                <Picker Style="{StaticResource UrgesPicker}"
+                                    Title="{x:Static resx:EntryResources.U_Alcohol}"
                                     SelectedIndex="{Binding Alcohol, Converter={StaticResource ScaleToIndexCvt}}"/>
+                            </Grid>
+                        </StackLayout>
 
-                        </Grid>
                     </StackLayout>
                 </Frame>
 
                 <Frame>
                     <StackLayout>
 
-                        <Label Text="Skills"/>
+                        <Label Text="{x:Static resx:EntryResources.Skills}" Style="{StaticResource ItemsTitleStyle}"/>
 
                         <StackLayout BindableLayout.ItemsSource="{Binding DaysDbtSkillsUsed}">
                             <BindableLayout.EmptyView>
-                                <Label Text="No skills was used"/>
+                                <Label Text="{x:Static resx:ViewResources.EmptySkillsList}"/>
                             </BindableLayout.EmptyView>
                             <BindableLayout.ItemTemplate>
                                 <DataTemplate x:DataType="{x:Null}">
                                     <StackLayout Orientation="Horizontal" x:DataType="{x:Null}">
-                                        <Label  Text="{Binding Skill}"/>
+                                        <Label  Text="{Binding SkillName}"/>
                                         <Picker Style="{StaticResource UsefulnessPicker}"
-                                                    Title="Usefulness"
-                                                    HorizontalOptions="EndAndExpand"
-                                                    SelectedIndex="{Binding Usefulness,
+                                                Title="{x:Static resx:EntryResources.Usefulness}"
+                                                HorizontalOptions="EndAndExpand"
+                                                SelectedIndex="{Binding Usefulness,
                                                     Converter={StaticResource ScaleToIndexCvt}}"/>
                                     </StackLayout>
                                 </DataTemplate>
@@ -199,9 +269,9 @@
                     </StackLayout>
                 </Frame>
 
-                <Button x:Name="btnSave" Command="{Binding SaveCommand}" Text="Save"/>
+                <Button x:Name="btnSave" Command="{Binding SaveCommand}" Text="{x:Static resx:ViewResources.Save}"/>
 
-                <Button x:Name="btnDelete" Command="{Binding DeleteCommand}" Text="Delete"
+                <Button x:Name="btnDelete" Command="{Binding DeleteCommand}" Text="{x:Static resx:ViewResources.Delete}"
                         IsVisible="{Binding IsEntryExistsInDb}"/>
 
             </StackLayout>
